[project]
name = "aidl"
version = "0.2.2"
description="AIDL and Java parser written in Python3."
authors = [
  { name="MatrixEditor", email="not@supported.com" },
  { name="Chris Thunes", email="cthunes@brewtab.com" },
]
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[project.urls]
"Homepage" = "https://github.com/MatrixEditor/aidl-parser"
"Original Repository" = "https://github.com/c2nes/javalang"
"Repository" = "https://github.com/MatrixEditor/aidl-parser"

[tool.setuptools.packages.find]
where = ["."]
include = ["aidl*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"